@@ -8,13 +8,11 @@ import org.springframework.context.annotation.Configuration;
 import org.springframework.security.authentication.AuthenticationManager;
 import org.springframework.security.authentication.AuthenticationProvider;
 import org.springframework.security.authentication.dao.DaoAuthenticationProvider;
-import org.springframework.security.config.Customizer;
 import org.springframework.security.config.annotation.authentication.configuration.AuthenticationConfiguration;
 import org.springframework.security.config.annotation.method.configuration.EnableMethodSecurity;
 import org.springframework.security.config.annotation.web.builders.HttpSecurity;
 import org.springframework.security.config.annotation.web.configuration.EnableWebSecurity;
 import org.springframework.security.config.http.SessionCreationPolicy;
-import org.springframework.security.core.userdetails.UserDetailsService;
 import org.springframework.security.crypto.bcrypt.BCryptPasswordEncoder;
 import org.springframework.security.crypto.password.PasswordEncoder;
 import org.springframework.security.web.SecurityFilterChain;
@@ -23,16 +21,18 @@ import org.springframework.web.cors.CorsConfiguration;
 import org.springframework.web.cors.CorsConfigurationSource;
 import org.springframework.web.cors.UrlBasedCorsConfigurationSource;
 
+import java.util.Arrays;
 import java.util.List;
+import java.util.stream.Collectors;
 
 @Configuration
 @EnableWebSecurity
 @EnableMethodSecurity(prePostEnabled = true)
 public class SecurityConfig {
 
-
     @Autowired
-    private CustomUserDetailService userDetailsService; 
+    private CustomUserDetailService userDetailsService;
+
     @Autowired
     private JwtFilter jwtFilter;
 
@@ -45,21 +45,18 @@ public class SecurityConfig {
                 .cors(cors -> cors.configurationSource(corsConfigurationSource()))
                 .authorizeHttpRequests(requests -> requests
                         .requestMatchers("/", "/public/**", "/admin/login", "/favicon.ico", "/error", "/actuator/**").permitAll()
-
                         .requestMatchers("/admin/create").hasRole("SUPER_ADMIN")
                         .requestMatchers("/admin/get-admins").hasRole("SUPER_ADMIN")
                         .requestMatchers("/admin/register-employee").hasRole("SUPER_ADMIN")
-
                         .requestMatchers("/admin/dashboard").hasAnyRole("SUPER_ADMIN", "ADMIN")
                         .requestMatchers("/admin/salary/**").hasAnyRole("SUPER_ADMIN")
                         .requestMatchers("/admin/attendance-list").hasAnyRole("SUPER_ADMIN")
                         .requestMatchers("/admin/contact/**").hasAnyRole("SUPER_ADMIN", "ADMIN")
                         .requestMatchers("/admin/box/**").hasAnyRole("SUPER_ADMIN", "ADMIN")
-
                         .requestMatchers("/admin/**").authenticated()
                         .anyRequest().authenticated())
-                .httpBasic(httpBasic -> httpBasic.disable()) 
-                .sessionManagement(session -> session.sessionCreationPolicy(SessionCreationPolicy.STATELESS)) 
+                .httpBasic(httpBasic -> httpBasic.disable())
+                .sessionManagement(session -> session.sessionCreationPolicy(SessionCreationPolicy.STATELESS))
                 .addFilterBefore(jwtFilter, UsernamePasswordAuthenticationFilter.class)
                 .build();
     }
@@ -68,14 +65,14 @@ public class SecurityConfig {
     public CorsConfigurationSource corsConfigurationSource() {
         CorsConfiguration config = new CorsConfiguration();
         List<String> origins = Arrays.stream(allowedOrigin.split(","))
-                                 .map(String::trim)
-                                 .toList();
-        config.setAllowedOrigins(List.of(origins)); 
+                .map(String::trim)
+                .collect(Collectors.toList());
+        config.setAllowedOrigins(origins);
         config.setAllowedMethods(List.of("GET", "POST", "PUT", "DELETE", "OPTIONS"));
-        config.setAllowedHeaders(List.of("*")); 
-        config.setAllowCredentials(true); 
+        config.setAllowedHeaders(List.of("*"));
+        config.setAllowCredentials(true);
         UrlBasedCorsConfigurationSource source = new UrlBasedCorsConfigurationSource();
-        source.registerCorsConfiguration("/**", config); 
+        source.registerCorsConfiguration("/**", config);
         return source;
     }
 
@@ -83,17 +80,17 @@ public class SecurityConfig {
     public AuthenticationProvider authenticationProvider() {
         DaoAuthenticationProvider provider = new DaoAuthenticationProvider();
         provider.setPasswordEncoder(passwordEncoder());
-        provider.setUserDetailsService(userDetailsService); 
+        provider.setUserDetailsService(userDetailsService);
         return provider;
     }
 
     @Bean
     public AuthenticationManager authenticationManager(AuthenticationConfiguration config) throws Exception {
-        return config.getAuthenticationManager(); 
+        return config.getAuthenticationManager();
     }
 
     @Bean
     public PasswordEncoder passwordEncoder() {
-        return new BCryptPasswordEncoder(); 
+        return new BCryptPasswordEncoder();
     }
 }
